# ronin

./: .gitignore  README.md  pyproject.toml
dataset_info/: README.txt
lists/: SHORT_list_test_unseen.txt
notebooks/: data_explorer.ipynb  imu-ml-security-project.code-workspace  ronin_lstm_running.ipynb  ronin_resnet_bb.ipynb  ronin_resnet_running.ipynb
output/resnet_out/: a019_3_gsn.npy  a024_1_gsn.npy  a024_3_gsn.npy  a029_1_gsn.npy  a029_2_gsn.npy  a032_1_gsn.npy  losses.csv
ronin/: A_peter_runner.ipynb  data_glob_heading.py  data_glob_speed.py  data_ridi.py  data_utils.py  model_temporal.py  ronin_body_heading.py  ronin_lstm_tcn.py  ronin_resnet.py
