[tool.poetry]
name = "ronin"
version = "0.1.0"
description = ""
authors = ["David Hunt <david.hunt@duke.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "~2.0"
scipy = "^1.14.1"
pandas = "^2.2.3"
h5py = "^3.12.1"
numba = "^0.60.0"
numpy-quaternion = "^2024.0.2"
matplotlib = "^3.9.2"
tensorboardx = "^2.6.2.2"
plyfile = "^1.1"
tqdm = "^4.66.6"
scikit-learn = "^1.5.2"

[tool.poetry.group.torch.dependencies]
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
torchsummary = "^1.5.1"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
